[package]
name = "chml"
version = "0.5.0"
edition = "2024"
description = "A CLI tool for chml"
authors = ["fb0sh <fb0sh@outlook.com>"]
license = "MIT"
repository = "https://github.com/fb0sh/chml"
readme = "README.md"
keywords = ["chml", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chml_api = { path = "../chml_api" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
dirs-next = "2.0.0"
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9.2"
surge-ping = "0.8.4"
